[package]
name = "jacuzzi"
version = "0.1.1"
authors = ["William Kamp <manimaul@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/manimaul/jacuzzi/"
keywords = ["http", "http2", "spa"]
categories = ["web-programming::http-server"]
publish = true
readme = "README.md"
description = "Jacuzzi is a simple (http & http2) web server for serving SPA (Single Page Applications)."

edition = "2018"

[dependencies]
openssl = "0.10.30"
actix-web = { version = "3.0.2", features = ["openssl"] }
actix-files = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.11"
env_logger = "0.7.1"
