[package]
name = "jacuzzi"
version = "0.2.1"
authors = ["William Kamp <manimaul@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/manimaul/jacuzzi/"
keywords = ["http", "http2", "spa"]
categories = ["web-programming::http-server"]
publish = true
readme = "README.md"
description = "Jacuzzi is a simple (http & http2) web server for serving SPA (Single Page Applications)."

edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.3", features = ["tls"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
